# 42Seoul

./: .gitignore  README.md  et aba518216d97225402e770d5a894f770ae38ebf3  libft_main.c
Born2beroot/: Born2beroot.md  README.md
Circle_0/Libft/: README.md  libft_main.c
Circle_1/Born2beroot/: README.md
Circle_1/Get_Next_Line/: README.md  a.out  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
Circle_1/ft_printf/: Makefile  README.md  a.out  ft_printf.c  ft_printf.h  ft_printf_bonus.c  ft_printf_bonus.h  ft_printf_utils.c  main_bonus.c  (+21 more)
Circle_4/: microshell.c
Get_Next_Line/: README.md  a.out  bonus.c  bonus.h  bonus_utils.c  get_next_line  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main  main.c  main_bonus.c  text.txt
Libft/: Makefile  README.md  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  (+6 more)
Outer/pythonPiscine/00-Starting/ex09/: LICENSE  README.md  pyproject.toml  setup.py
Outer/pythonPiscine/00-Starting/ex09/ft_package/: __init__.py  count_in_list.py
(+792 files in other folders)
